--- a/install
+++ b/install
@@ -4,3 +4,11 @@
 
 # 基本的なツール類のインストール
 sudo apt-get install -y git ca-certificates build-essential 
+
+
+# Draw IO（ドローイングプログラム）の取得とインストール
+wget https://github.com/jgraph/drawio-desktop/releases/download/v19.0.3/drawio-amd64-19.0.3.deb
+sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2
+sudo dpkg -i drawio-amd64-??.?.?.deb
+
+sudo apt-get install -y 
