--- a/install
+++ b/install
@@ -8,7 +8,6 @@ sudo apt-get install -y git ca-certificates build-essential
 
 # Draw IO（ドローイングプログラム）の取得とインストール
 wget https://github.com/jgraph/drawio-desktop/releases/download/v19.0.3/drawio-amd64-19.0.3.deb
-sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2
-sudo dpkg -i drawio-amd64-??.?.?.deb
+sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
+curl -s https://api.github.com/repos/jgraph/drawio-desktop/releases/latest | grep browser_download_url | grep '\.deb' | cut -d '"' -f 4 | wget -i -
 
-sudo apt-get install -y 
