--- a/install
+++ b/install
@@ -17,6 +17,13 @@ sudo apt-get install -y imagemagick
 # delete the PDF policy line from the /etc/ImageMagic*/policy.xml
 find /etc/ImageMagic*/policy.xml | xargs sudo sed -i /^.*pattern=\"PDF\".*$/d 
 
+
+# Install Live Tex
+wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
+tar xvf install-tl-unx.tar.gz
+cd install-tl-2*
+sudo ./install-tl -no-gui -repository http://mirror.ctan.org/systems/texlive/tlnet/
+
 # By placing the following code in the ~/latexmkrc, TeX file is compiled 
 # for each time the file is saved.
 # The code below was copied from https://qiita.com/rainbartown/items/d7718f12d71e688f3573  
