--- a/sample.bib
+++ b/sample.bib
@@ -1,30 +1,6 @@
- @misc{hp9100_initial_journey,
-  author       = {Steve Leibson},
-  title        = {The HP 9100: The Initial Journey},
-  howpublished = {\url{http://www.hp9825.com/html/the_9100_project.html}},
-  note         = {HPが9100卓上計算機の開発に至るまでのエピソードをまとめたもの。}
-}
-
-@misc{EL-210,
-  author       = {Emil Dudek},
-  title        = {Sharp Elsimate EL-210 (type I)},
-  howpublished = {\url{https://vintage-technology.club/pages/calculators/sharp/sharpel210.htm}},
-  note         = {Vintage Technologyサイトの中のSHARP EL-210紹介ページ。分解写真と部品の説明がある。}
-}
-
- @misc{hp34c_integral,
-  author       = {},
-  title        = {},
-  howpublished = {\url{}},
+ @misc{best_latex_env,
+  author       = {rainbartown},
+  title        = {VSCodeで最高のLaTeX 環境を作る},
+  howpublished = {\url{https://qiita.com/rainbartown/items/d7718f12d71e688f3573}},
   note         = {}
 }
-
-
- @misc{foo,
-  author       = {William Kahan},
-  title        = {Handheld Calculator Evaluates Integrals},
-  howpublished = {\url{https://people.eecs.berkeley.edu/~wkahan/Math128/INTGTkey.pdf}},
-  note         = {Kahan博士が1980年にHEWLETT-PACKARD JOURNALに寄稿した記事。}
-}
-
-
