プロジェクト名をALEからPaleALEに変更

--- a/sample/000_preface.tex
+++ b/sample/000_preface.tex
@@ -2,10 +2,10 @@
 \label{sec:preface}
 \addcontentsline{toc}{chapter}{はじめに}
 
-ALE ( A \LaTeX\ Environment )は、Linux上で\term{Visual Studio Code}を用いて\LaTeX\ 執筆環境を
+PaleALE ( Pale - A \LaTeX\ Environment )は、Linux上で\term{Visual Studio Code}を用いて\LaTeX\ 執筆環境を
 整えるためのスクリプトおよびサンプルプロジェクトです。
 
-ALEを使うことで、以下のようなプラットフォームに\LaTeX\ 処理環境を作ることが出来ます。
+PaleALEを使うことで、以下のようなプラットフォームに\LaTeX\ 処理環境を作ることが出来ます。
 \begin{itemize}
   \item Ubuntuデスクトップ
   \item WSL上のUbuntuデスクトップ
@@ -13,7 +13,7 @@ ALEを使うことで、以下のようなプラットフォームに\LaTeX\ 処
 後者の場合、Visual Studio CodeはWindows上で動きます。いずれの場合もLaTeXの処理はLinux上で行い、
 編集及び生成したPDFの表示は\term{\LaTeX\ Workshop}の助けを借りてVisual Studio Code上に表示します。
 
-また、ALEでは以下の形式の図形を文書中に取り込むことが出来ます。
+また、PaleALEでは以下の形式の図形を文書中に取り込むことが出来ます。
 \begin{itemize}
   \item PDF
   \item JPEG
