--- a/install
+++ b/install
@@ -2,74 +2,83 @@
 
 # Install script of Latex environmente. Tested on Ubuntu 22.04 LTS
 
-# Create working directory for installing. 
-mkdir temp
-cd temp
+# Use subshell to encapsule the effect of umask
+(
 
-# Foundemental tools installation
-sudo apt-get update && sudo apt-get upgrade -y
-sudo apt-get install -y git ca-certificates build-essential parallel xvfb
-sudo cpan YAML::Tiny
-sudo cpan File::HomeDir
+    # Foundemental tools installation
+    sudo apt-get update && sudo apt-get upgrade -y
+    sudo apt-get install -y git ca-certificates build-essential parallel xvfb
 
-# Draw IO（ドローイングプログラム）の取得とインストール
-sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
-curl -s https://api.github.com/repos/jgraph/drawio-desktop/releases/latest | grep browser_download_url | grep '\.deb' | cut -d '"' -f 4 | wget -i -
-sudo apt -f install -y ./drawio-amd64-*.deb
+    # Create working directory for installing. 
+    umask 077   # Secure the temp directory.
+    timestamp=$(date +%Y%m%d%H%M%S)
+    # Make safe directory under the /tmp
+    tmpd=$( mktemp -dt "PaleALE.$USER.$timestamp.XXXXXX")/
+    cd $tmpd
 
-# Install ImageMagick
-sudo apt-get install -y imagemagick 
-# Allowing to generate the PDF. 
-# delete the PDF policy line from the /etc/ImageMagic*/policy.xml
-find /etc/ImageMagic*/policy.xml | xargs sudo sed -i /^.*pattern=\"PDF\".*$/d 
+    # These cpan modules are needed.
+    sudo cpan YAML::Tiny
+    sudo cpan File::HomeDir
+
+    # Draw IO（ドローイングプログラム）の取得とインストール
+    sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
+    curl -s https://api.github.com/repos/jgraph/drawio-desktop/releases/latest | grep browser_download_url | grep '\.deb' | cut -d '"' -f 4 | wget -i -
+    sudo apt -f install -y ./drawio-amd64-*.deb
+
+    # Install ImageMagick
+    sudo apt-get install -y imagemagick 
+    # Allowing to generate the PDF. 
+    # delete the PDF policy line from the /etc/ImageMagic*/policy.xml
+    find /etc/ImageMagic*/policy.xml | xargs sudo sed -i /^.*pattern=\"PDF\".*$/d 
 
 
-# Install TeX Live
-wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
-tar xvf install-tl-unx.tar.gz
-cd install-tl-2*
-sudo ./install-tl -no-gui -repository http://mirror.ctan.org/systems/texlive/tlnet/
-# Adding path of TeX
-sudo /usr/local/texlive/????/bin/*/tlmgr path add
+    # Install TeX Live
+    wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
+    tar xvf install-tl-unx.tar.gz
+    cd install-tl-2*
+    sudo ./install-tl -no-gui -repository http://mirror.ctan.org/systems/texlive/tlnet/
+    # Adding path of TeX
+    sudo /usr/local/texlive/????/bin/*/tlmgr path add
 
-# By placing the following code in the ~/latexmkrc, TeX file is compiled 
-# for each time the file is saved.
-# The code below was copied from https://qiita.com/rainbartown/items/d7718f12d71e688f3573  
-cat - << 'EOF' > ~/.latexmkrc
-#!/usr/bin/env perl
+    # By placing the following code in the ~/latexmkrc, TeX file is compiled 
+    # for each time the file is saved.
+    # The code below was copied from https://qiita.com/rainbartown/items/d7718f12d71e688f3573  
+    cat - << 'EOF' > ~/.latexmkrc
+    #!/usr/bin/env perl
 
-# LaTeX
-$latex = 'platex -synctex=1 -halt-on-error -file-line-error %O %S';
-$max_repeat = 5;
+    # LaTeX
+    $latex = 'platex -synctex=1 -halt-on-error -file-line-error %O %S';
+    $max_repeat = 5;
 
-# BibTeX
-$bibtex = 'pbibtex %O %S';
-$biber = 'biber --bblencoding=utf8 -u -U --output_safechars %O %S';
+    # BibTeX
+    $bibtex = 'pbibtex %O %S';
+    $biber = 'biber --bblencoding=utf8 -u -U --output_safechars %O %S';
 
-# index
-$makeindex = 'mendex %O -o %D %S';
+    # index
+    $makeindex = 'mendex %O -o %D %S';
 
-# DVI / PDF
-$dvipdf = 'dvipdfmx %O -o %D %S';
-$pdf_mode = 3;
+    # DVI / PDF
+    $dvipdf = 'dvipdfmx %O -o %D %S';
+    $pdf_mode = 3;
 
-# preview
-$pvc_view_file_via_temporary = 0;
-if ($^O eq 'linux') {
-    $dvi_previewer = "xdg-open %S";
-    $pdf_previewer = "xdg-open %S";
-} elsif ($^O eq 'darwin') {
-    $dvi_previewer = "open %S";
-    $pdf_previewer = "open %S";
-} else {
-    $dvi_previewer = "start %S";
-    $pdf_previewer = "start %S";
-}
+    # preview
+    $pvc_view_file_via_temporary = 0;
+    if ($^O eq 'linux') {
+        $dvi_previewer = "xdg-open %S";
+        $pdf_previewer = "xdg-open %S";
+    } elsif ($^O eq 'darwin') {
+        $dvi_previewer = "open %S";
+        $pdf_previewer = "open %S";
+    } else {
+        $dvi_previewer = "start %S";
+        $pdf_previewer = "start %S";
+    }
 
-# clean up
-$clean_full_ext = "%R.synctex.gz"
+    # clean up
+    $clean_full_ext = "%R.synctex.gz"
 EOF
 
-# Leave the working directory and delete it. 
-cd -
-rm temp -rf
+ 
+   # Leave the working directory by existing subshell
+)
+
