サンプル文書をアップデート
Issueへのリンクを追加した。
不要になった文献参照を削除した。

--- a/sample/sample.bib
+++ b/sample/sample.bib
@@ -4,8 +4,14 @@
   howpublished = {\url{https://qiita.com/rainbartown/items/d7718f12d71e688f3573}}
 }
 
- @misc{ELECTRON_RUN_AS_NODE,
-  author       = {Brecht Machiels},
-  title        = {ELECTRON\_RUN\_AS\_NODE is inherited from the VSCode environment when building a CMake target},
-  howpublished = {\url{https://github.com/microsoft/vscode-cmake-tools/issues/1545}}
+ @misc{ISSUE_1,
+  author       = {Seiichi Horie},
+  title        = {WSL環境においてdraw.ioプログラムのコマンドライン実行に失敗する},
+  howpublished = {\url{https://github.com/suikan4github/PaleALE/issues/1}}
+}
+
+ @misc{ISSUE_3,
+  author       = {Seiichi Horie},
+  title        = {索引が空の場合にLaTeXのビルドが異常終了する},
+  howpublished = {\url{https://github.com/suikan4github/PaleALE/issues/3}}
 }
