Typoの修正とコメントの追加。
mdファイルのTypoを修正した。またsample/preumble.texの /term マクロに
分かりやすいコメントを加えた。

--- a/sample/preamble.tex
+++ b/sample/preamble.tex
@@ -48,8 +48,11 @@
   allcolors=blue
 }
 
-% 重要用語コマンド
-% フォントを変え、かつ索引に登録する
+% 言葉を強調し、かつ索引に登録する
+% \term{言葉}
+% \term[よみがな]{言葉}
+% のいずれかを使う。よみがなを指定した場合、検索にはよみがな順で
+% 掲載される。よみがなは{}ではなく[]でくるむことに注意。
 
 \newcommand*{\term}[2][]{%
   {\sffamily\bfseries #2}%
