Start to write the screenshot chapter.

--- a/sample/sample.tex
+++ b/sample/sample.tex
@@ -19,7 +19,8 @@
 \tableofcontents
 \addcontentsline{toc}{chapter}{目次}
 
-\input{010_body.tex}
+\input{010_screenshots.tex}
+\input{020_figures.tex}
 
 \appendix
 \input{a10_appendix.tex}
