--- a/sample/020_figures.tex
+++ b/sample/020_figures.tex
@@ -1,7 +1,7 @@
 \chapter{図形埋め込みのサンプル}
 \label{sec:figure_sample}
 
-この章では各種形式の図形を埋め込む例を示します。
+この章では各種形式の図形を\LaTeX 文書に埋め込む例を示します。
 
 \section{PDF図形の埋め込み}
 \begin{wrapfigure}[9]{O}[0pt]{0\textwidth}
