Refine section structure

--- a/sample/010_screenshots.tex
+++ b/sample/010_screenshots.tex
@@ -8,9 +8,9 @@
 \section{スクリーンショットは何故汚いか}
 
 
-\section{大きなスクリーンショットの考え方}
-\section{4Kモニタを使う}
-\section{GPUでフレームバッファを使う}
-\section{HDMIディスプレイ・プラグを使う}
-\section{VMWare Workstationを使う}
+\section{大きなスクリーンショットの撮り方}
+\subsection{4Kモニタを使う}
+\subsection{GPUを使う}
+\subsection{VMWare Workstationを使う}
+\subsection{HDMIディスプレイ・プラグを使う}
 \section{まとめ}
