Writing the snapshot.

--- a/sample/010_screenshots.tex
+++ b/sample/010_screenshots.tex
@@ -4,13 +4,191 @@
 \LaTeX で文書を作る際の難しさの一つに、スクリーンショットの処理があります。
 
 この文書では、\LaTeX 文書に美しくスクリーンショットを張り付ける方法を説明します。
+なお、スクリーンショットを撮るOSはWindows11を想定しています。
 
 \section{スクリーンショットは何故汚いか}
 
+\begin{wrapfigure}{r}[0pt]{0.5\textwidth}
+  \begin{center}
+    \includegraphics*[width=50mm]{image/sc100.pdf}
+    \caption{スクリーンショット} \label{fig:normal_ss}
+  \end{center}
+\end{wrapfigure}
+
+まずは図\ref{fig:normal_ss}を見てください。
+
+お世辞にもきれいとは言えないスクリーンショットです。このスクリーンショットはWindows上で
+ごく普通の方法で取得したものを張り付けています。このスクリーンショットを撮ったときには、Windowsの
+画面表示はここまでひどいものではありませんでした。
+
+こうまでひどくなったのには理由があります。Windowsで撮ったスクリーンショットは、\LaTeX 文書に
+張り付けてPDFに変換する際、紙面サイズや\LaTeX 図形表示サイズに合わせてスケーリングされます。
+この際、なるべくきれいにスケーリングするアルゴリズムが選ばれてはいるものの、もともとの図形が細かい
+ため、どうしても細部が崩れてしまうのです。
+
+
+\begin{wrapfigure}{r}[0pt]{0.5\textwidth}
+  \begin{center}
+    \includegraphics*[width=50mm]{image/sc200.pdf}
+    \caption{スクリーンショット} \label{fig:beautiful_ss}
+  \end{center}
+\end{wrapfigure}
+
+では次に図\ref{fig:beautiful_ss}を見てください。図\ref{fig:normal_ss}に比べて
+格段に美しいスクリーンショットです。拡大すれば粗が見えるものの、画面で見るPDFの品質としては
+十分ではないでしょうか。
+
+図\ref{fig:beautiful_ss}が美しい秘密は、その大きさにあります。実は、このスクリーンショットは
+図\ref{fig:normal_ss}の倍のサイズで表示されたものを取得しているのです。つまり、長さ方向で
+倍の情報を持っているため、スケーリングするときに有利になるわけです。
+
+この例では200\%拡大のスクリーンショットですが、400\%拡大でスクリーンショットを撮れば
+印刷にも耐える品質になります。
+
+この文書では、\LaTeX 文書に張り付けるための大きなスクリーンショットの撮り方を説明します。
 
 \section{大きなスクリーンショットの撮り方}
-\subsection{4Kモニタを使う}
+大きなスクリーンショットを撮る理屈は簡単です。画面拡大率を大きくしてスクリーンショットを
+撮ればよいのです。
+
+\begin{figure}[btp]
+  \begin{center}
+    \includegraphics*[width=85mm]{image/system-display.pdf}
+    \caption{Windowsの拡大縮小設定} \label{fig:system-display}
+  \end{center}
+\end{figure}
+
+図\ref{fig:system-display}に、Windowsの拡大縮小設定画面を示します。
+この画面は、コントロールパネルの中の、システム / ディスプレイを開くことで
+見ることができます。
+
+このスクリーンショットによれば、設定は200\%となっています。つまり、絵や文字は
+我々に見やすいサイズの200\%で表示されているのです。このため、スクリーンショットは
+倍のサイズで取得することができ、きれいに貼りつけることができるわけです。
+
+しかしながら、狭い画面で倍のサイズに表示すると非常に作業性が悪くなります。
+
+そこで、続く節ではあの手この手でこの「倍のサイズのスクリーンショット」を
+作業性を落とさずに取得する方法を説明します。
+
+どの手法もカギになるのはフレームバッファのサイズです。フレームバッファはコンピュータが
+ディスプレイに移すための最終的な画面の情報を保持するバッファです。ここにある絵が
+そのままディスプレイに表示されていると普通は考えられます。しかしながら、現代の
+コンピュータは複雑です。その複雑さを逆手にとって、なるべく手軽に大きなスクリーンショットを
+撮ろうというのがこの文書の目的です。
+
+\subsection{4Kディスプレイを使う}
+大きなスクリーンショットをとる一番簡単な方法は、4kディスプレイを使うことです。
+
+4kディスプレイを接続すれば、Windows PC内部のフレームバッファも自動的に4kサイズに
+なります。この様子を図\ref{fig:4k-display}に示します。4kディスプレイの表示エリアは広大です
+ので、Windowsの拡大縮小設定を200\%相当にしてもなお2kディスプレイ相当の情報を
+表示することができます。
+
+\begin{figure}[btp]
+  \begin{center}
+    \includegraphics*[width=70mm]{image/4kdisplay.pdf}
+    \caption{4kディスプレイを使う} \label{fig:4k-display}
+  \end{center}
+\end{figure}
+
+少々もったいない方法ですが、スクリーンショットを撮るときだけ我慢すればよいことですし、
+作業性もそれほど低下しません。
+
+4kディスプレイの価格もだいぶこなれてきましたので、4kディスプレイを使うことのできる人は
+この方法を使うとよいでしょう。
+
 \subsection{GPUを使う}
-\subsection{VMWare Workstationを使う}
-\subsection{HDMIディスプレイ・プラグを使う}
+4kディスプレイを使わずとも、GPUを使うと内部で4kサイズのフレームバッファを作ることができます。
+
+例えばAMDのRadeon GPUシリーズは、VSR (Virtual Super Resolution)と呼ばれるダウンスケーリング
+機能を持っています。これはもともとゲーム用のもので、Windows内部のフレームバッファに大きくレンダリング
+しておき、GPUで縮小してディスプレイに表示することでゲーム品質を上げようというものです。
+
+この機能はOSのフレームバッファを扱いますので、ゲームに限らず普通のアプリケーションにも適用されます。
+
+具体的には、図\ref{fig:gpu}に表したように、外部の2kディスプレイに対して内部で4kフレームバッファを
+用意するといった方法をとります。
+
+\begin{figure}[btp]
+  \begin{center}
+    \includegraphics*[width=70mm]{image/gpu.pdf}
+    \caption{GPUを使う} \label{fig:gpu}
+  \end{center}
+\end{figure}
+
+AMDのRadeonシリーズの場合は、設定手順は次のようになります。
+
+
+\begin{enumerate}
+  \item AMDのAdrenaline Editionツールで、「仮想解像度」機能を有効にする。
+  \item Windowsのディスプレイ設定の解像度の選択肢が増えるので、4kなどの大きな解像度を選ぶ。
+  \item Windowsのディスプレイ設定の拡大率を200\%にする。
+\end{enumerate}
+
+NVIDIAにはAMDのVSRに相当するDSR技術がありますので、同様の設定が使えるはずです。
+AMDのVSRはRadeon RX6400のようなローエンドのGPUやRyzen 5 2600GのようなAPUにも
+搭載されています。調べた限りでは2024年3月時点で生産されているAMDの全GPU製品
+（CPU内蔵GPUを含む）でこの機能を使うことができるはずです。ただし、ほとんどの場合スペックに明記
+されていないので買う前に調べることをお勧めします。
+
+なお、IntelのGPU製品(CPU内蔵GPUを含む)は、この機能に対応していません。
+
+GPUによる縮小は非常に手軽でレスポンスも良く、8kといった解像度のフレームバッファも気軽に使えますので
+お勧めでする方法です。
+
+\subsection{仮想マシンを使う}
+VMWare WorkstationやVirtualBoxといった仮想化ソフトを使うと、
+PCに接続しているディスプレイよりも画面サイズの大きな仮想ディスプレイを
+作ることができます。
+
+\begin{figure}[btp]
+  \begin{center}
+    \includegraphics*[width=100mm]{image/vmware.pdf}
+    \caption{仮想マシンを使う} \label{fig:vm}
+  \end{center}
+\end{figure}
+
+
+この仮想ディスプレイは、直接物理ディスプレイには出力されず、あくまで
+アプリケーションのフレームバッファとして扱われます（図\ref{fig:vm}）。そして、ホストOSの
+フレームバッファにコピーされる際、縮小されます。
+
+この機能を使うことによって、4k仮想ディスプレイへの表示を縮小して
+2kディスプレイで見ながら作業する事ができます。
+
+この方法は外部にハードウェアを必要としませんが、仮想マシン内部に追加の
+Windowsライセンスが必要になります。また、調べた限りではVMWare Workstation
+Player 17では物理ディスプレイよりも大きな仮想ディスプレイを作ることができません。
+
+
+
+\subsection{ダミープラグとデスクトップ共有を使う}
+HDMIダミープラグ、あるいはEDIDエミュレータと呼ばれるデバイスを使うと
+4kのダミー・フレームバッファを作ることができます。この4kのフレームバッファを使うことで
+大きなスクリーンショットを撮ることができます。
+
+この方法は4kモニタを持っておらず、GPUを利用することもできず、追加のWindowsライセンスを
+購入することもできない場合に有効です。具体的にはビジネス用のノートPCを使って\LaTeX 文書を
+書く場合などに活用できます。
+
+ノートPCにHDMIダミープラグを挿すと、内蔵ディスプレイ用のフレームバッファに加えて
+HDMIダミープラグ用のフレームバッファが作られます（図\ref{fig:display-plug}）。ダミープラグは親指サイズのデバイスであり、
+PCから見るとHDMIディスプレイに見えます。一方で、それ自身にはディスプレイは
+ついていません。ダミーと呼ぶにふさわしい製品です。
+
+一方、HDMIダミープラグを挿すと、ユーザーからはマルチ・ディスプレイ
+のように見えます。しかし、構造上こうなっているというだけで、フレームバッファ2の
+内容を見ることはできません。ここまでが第1ステップです。
+
+次のステップではフレームバッファ２の内容を見えるようにします。ここで使うのがデスクトップ
+共有です。
+
+
+\begin{figure}[btp]
+  \begin{center}
+    \includegraphics*[width=70mm]{image/displayplug.pdf}
+    \caption{ダミープラグを使う} \label{fig:display-plug}
+  \end{center}
+\end{figure}
 \section{まとめ}
