--- a/install
+++ b/install
@@ -7,7 +7,7 @@
 
     # Foundemental tools installation
     sudo apt-get update && sudo apt-get upgrade -y
-    sudo apt-get install -y git ca-certificates build-essential parallel xvfb
+    sudo apt-get install -y git ca-certificates build-essential parallel xvfb cpanminus
 
     # Create working directory for installing. 
     umask 077   # Secure the temp directory.
@@ -17,8 +17,8 @@
     cd $tmpd
 
     # These cpan modules are needed.
-    sudo cpan YAML::Tiny
-    sudo cpan File::HomeDir
+    sudo cpanm YAML::Tiny
+    sudo cpanm File::HomeDir
 
     # Draw IO（ドローイングプログラム）の取得とインストール
     sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
