--- a/install
+++ b/install
@@ -16,6 +16,8 @@
     tmpd=$( mktemp -dt "PaleALE.$USER.$timestamp.XXXXXX")/
     cd $tmpd
 
+    # Suppress to ask use during the cpan run. 
+    export PERL_MM_USE_DEFAULT=1 
     # These cpan modules are needed.
     sudo cpanm YAML::Tiny
     sudo cpanm File::HomeDir
