--- a/install
+++ b/install
@@ -4,12 +4,10 @@
 # Note : We support only x86_64 and aarch64
 
 # Check the architecture 
-    export CPU=$(arch)
+    
     # The $CPU must be x86_64 or aarch64
-    if $(echo $CPU | grep x86_64 > /dev/null); then
-        echo OK. We support x86_64. > /dev/null
-    elif $(echo $CPU | grep aarch64 > /dev/null); then
-        echo OK. We support aarch64. > /dev/null
+    if $(arch | grep -e x86_64 -e aarch64 > /dev/null); then
+        echo OK. We support x86_64 and aarch64 . > /dev/null
     else 
         echo $CPU is not supported. 
         exit 1
@@ -40,9 +38,9 @@
     sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
     curl -s https://api.github.com/repos/jgraph/drawio-desktop/releases/latest | grep browser_download_url | grep '\.deb' | cut -d '"' -f 4 | wget -i -
 
-    if $(echo $CPU | grep x86_64 > /dev/null); then
+    if $(arch | grep x86_64 > /dev/null); then
         sudo apt -f install -y ./drawio-amd64-*.deb
-    elif $(echo $CPU | grep aarch64 > /dev/null); then
+    elif $(arch | grep aarch64 > /dev/null); then
         sudo apt -f install -y ./drawio-arm64-*.deb
     else 
         echo Program logic error at Draw.IO installation.
