--- a/install
+++ b/install
@@ -1,11 +1,11 @@
-#! /bin/sh
+#!/bin/sh
 
 # Install script of Latex environmente. Tested on Ubuntu 22.04 LTS
 # Note : We support only x86_64 and aarch64
 
-if [[ `id -u` -ne 0 ]]; then
+if  [ `id -u` -ne 0 ] ; then
   # Only root can run this. 
-  echo "Please run as root."
+  echo "ERROR : Please run as root. ex: sudo ./install"
   exit 1
 fi
 
@@ -24,8 +24,8 @@ fi
 (
 
     # Foundemental tools installation
-    sudo apt-get update && sudo apt-get upgrade -y
-    sudo apt-get install -y git ca-certificates build-essential parallel xvfb cpanminus
+    apt-get update && apt-get upgrade -y
+    apt-get install -y git ca-certificates build-essential parallel xvfb cpanminus
 
     # Create working directory for installing. 
     umask 077   # Secure the temp directory.
@@ -37,36 +37,36 @@ fi
     # Suppress to ask use during the cpan run. 
     export PERL_MM_USE_DEFAULT=1 
     # These cpan modules are needed.
-    sudo cpanm YAML::Tiny
-    sudo cpanm File::HomeDir
+    cpanm YAML::Tiny
+    cpanm File::HomeDir
 
     # Draw IO（ドローイングプログラム）の取得とインストール
-    sudo apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
+    apt-get -y install sqlite libgtk-3-0 libgbm1 libasound2 curl
     curl -s https://api.github.com/repos/jgraph/drawio-desktop/releases/latest | grep browser_download_url | grep '\.deb' | cut -d '"' -f 4 | wget -i -
 
     if $(arch | grep x86_64 > /dev/null); then
-        sudo apt -f install -y ./drawio-amd64-*.deb
+        apt -f install -y ./drawio-amd64-*.deb
     elif $(arch | grep aarch64 > /dev/null); then
-        sudo apt -f install -y ./drawio-arm64-*.deb
+        apt -f install -y ./drawio-arm64-*.deb
     else 
         echo Program logic error at Draw.IO installation.
         exit 1
     fi
 
     # Install ImageMagick
-    sudo apt-get install -y imagemagick 
+    apt-get install -y imagemagick 
     # Allowing to generate the PDF. 
     # delete the PDF policy line from the /etc/ImageMagic*/policy.xml
-    find /etc/ImageMagic*/policy.xml | xargs sudo sed -i /^.*pattern=\"PDF\".*$/d 
+    find /etc/ImageMagic*/policy.xml | xargs sed -i /^.*pattern=\"PDF\".*$/d 
 
 
     # Install TeX Live
     wget http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
     tar xvf install-tl-unx.tar.gz
     cd install-tl-2*
-    sudo ./install-tl -no-gui -repository http://mirror.ctan.org/systems/texlive/tlnet/
+    ./install-tl -no-gui -repository http://mirror.ctan.org/systems/texlive/tlnet/
     # Adding path of TeX
-    sudo /usr/local/texlive/????/bin/*/tlmgr path add
+    /usr/local/texlive/????/bin/*/tlmgr path add
  
    # Leave the working directory by exiting subshell
 )
